tests/resource/valid/control_flow/class_field_assigned_to_exhaustive_match.mamba
class MyClass
    def x: Int

    def __init__(self) =>
        match 10
            2 => self.x := 2
            3 => self.x := 3
            _ => self.x := 3
