tests/resource/invalid/type/control_flow/class_field_assigned_to_only_then.mamba
class MyClass
    def x: Int

    def __init__(self) =>
        if False then
            self.x := 10
        else
            print("something")
